Fixed too large interval between the lines when wrapping graph title

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 
 .graph-title {
   fill: black;
-  font: 20px Arial;
+  font: 20px sans-serif;
 }
 
 .leglabel {
